--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "firebase": "^9.6.9",
     "vue": "^3.2.13",
+    "vue-chartjs": "^4.0.5",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
